force-app/main/default/objects/Dataset3__c/Dataset3__c.object-meta.xml
<CustomObject>
    <label>Dataset3</label>
    <nameField>
        <label>Dataset3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataset3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>