force-app/main/default/objects/Dataset3__c/fields/Dataset2__c.field-meta.xml
<CustomField>
    <fullName>Dataset2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset2</label>
    <referenceTo>Dataset2__c</referenceTo>
    <relationshipLabel>Dataset3</relationshipLabel>
    <relationshipName>Dataset3</relationshipName>
    <type>Lookup</type>
</CustomField>