force-app/main/default/objects/Dataset3__c/fields/Dataset3__c.field-meta.xml
<CustomField>
    <fullName>Dataset3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <referenceTo>Dataset3__c</referenceTo>
    <relationshipLabel>Dataset3</relationshipLabel>
    <relationshipName>Dataset3</relationshipName>
    <type>Lookup</type>
</CustomField>