force-app/main/default/objects/Dataset3__c/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention</label>
    <referenceTo>Dataset3__c</referenceTo>
    <relationshipLabel>Dataset3 (Intervention)</relationshipLabel>
    <relationshipName>Dataset34</relationshipName>
    <type>Lookup</type>
</CustomField>