force-app/main/default/objects/Dataset3__c/fields/Intervention_Name__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Name__c</fullName>
    <label>Intervention Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>