force-app/main/default/objects/Dataset3__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Dataset3__c</referenceTo>
    <relationshipLabel>Dataset3 (Objective)</relationshipLabel>
    <relationshipName>Dataset33</relationshipName>
    <type>Lookup</type>
</CustomField>