force-app/main/default/objects/Dataset3__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <label>Objective Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>