force-app/main/default/objects/Dataset3__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <referenceTo>Dataset3__c</referenceTo>
    <relationshipLabel>Dataset3 (Problem)</relationshipLabel>
    <relationshipName>Dataset31</relationshipName>
    <type>Lookup</type>
</CustomField>