force-app/main/default/objects/Dataset3__c/recordTypes/Problems.recordType-meta.xml
<RecordType>
    <fullName>Problems</fullName>
    <active>true</active>
    <label>Problems</label>
</RecordType>