force-app/main/default/objects/Dataset3__c/recordTypes/Treatment_Plan_Recordtype3.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype3</fullName>
    <active>true</active>
    <label>Objectives</label>
</RecordType>