force-app/main/default/objects/Dataset3__c/recordTypes/Treatment_Plan_Recordtype4.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype4</fullName>
    <active>true</active>
    <label>Interventions</label>
</RecordType>